# Scientific-C-plus-plus

./: .gitignore  CONTRIBUTING.md  README.md  glossary.md  scientific_cpp.pptx
source-code/Algorithms/: CMakeLists.txt  README.md  algorithm_choices.md  aman.cpp  particle_sort.cpp  points.cpp  zip_it.cpp
source-code/Algorithms/OceanView/: CMakeLists.txt  README.md  main_test.cpp  main_timing2.cpp  ocean_view.cpp  ocean_view.h
source-code/Algorithms/ocean-view/: CMakeLists.txt  README.md
source-code/Algorithms/std-algorithms/: CMakeLists.txt  README.md  count_clamp.cpp  distance.cpp  find_if.cpp  find_words.cpp
source-code/Armadillo/: CMakeLists.txt  README.md  inverse.cpp
source-code/Assembler/CalcSum/: CMakeLists.txt  README.md
source-code/Basics/: CMakeLists.txt  Makefile  README.md  argument_passing.cpp  arrays.cpp  arrays_vs_pointers.cpp  cl_arguments.cpp  col_dist.cpp  euclidian_distance.cpp  fac.cpp  gcd.cpp  hello.cpp  local_namespace_use.cpp  scope.cpp  swap.cpp
source-code/CLI11/: CMakeLists.txt  README.md  random_default.cpp
source-code/CPM/: CMakeLists.txt  README.md  main.cpp
source-code/Classes/: CMakeLists.txt  README.md  late_binding.cpp
source-code/Classes/LateBinding/: CMakeLists.txt  README.md  stats.cpp
source-code/Classes/Mixin/: CMakeLists.txt  README.md  color.h  main.cpp  paint.h  pixel.h  point.h
source-code/Classes/Particles/: CMakeLists.txt  README.md  main.cpp  particle.cpp  particle.h  static_particle.cpp  static_particle.h
source-code/Classes/Quadrature/: README.md  main_quad.cpp
source-code/Classes/QuadratureImplementations/: README.md
source-code/Classes/Quadrature_CRTP/: README.md  gaussian_quad.cpp  quad.h
source-code/Classes/Quadrature_deduce_this/: CMakeLists.txt  README.md  quad.h
source-code/Classes/Quadrature_duck_typing/: CMakeLists.txt
source-code/Classes/Stats/: CMakeLists.txt  README.md  main_stats.cpp  simple_stats.cpp  simple_stats.h  stats.cpp  stats.h  test_exceptions.cpp  test_values.cpp
source-code/Containers/: CMakeLists.txt  Makefile  README.md  container_choices.md  cosine_similarity.cpp  diffusion_system.h  dim_nrs.cpp  kaprekar.cpp  list.cpp  rpn_calc.cpp  split_string.cpp  stats.cpp  synthesizer.cpp  tuple.cpp
source-code/Containers/Knapsack/: CMakeLists.txt
source-code/Containers/SlidingWindow/: README.md
source-code/Containers/associative/: CMakeLists.txt  README.md  dim_nr_counts.cpp  distinct_words.cpp  word_frequencies.cpp
source-code/Containers/numeric/: CMakeLists.txt  README.md  kaprekar.cpp  mdspan_test.cpp  stats.cpp
source-code/Containers/sequence/: CMakeLists.txt  README.md  array_sum_squares.cpp  particle_tuple.cpp  tuple.cpp  vector_stats.cpp
source-code/Containers/sliding_window/: CMakeLists.txt  README.md
source-code/Containers/stacks_queues/: CMakeLists.txt  README.md  er_triage.cpp  task_queue.cpp
source-code/Eigen/: CMakeLists.txt  README.md
source-code/Eigen/Mkl/: CMakeLists.txt  README.md
source-code/Eigen/StringAlignment/: CMakeLists.txt  README.md
source-code/Functional/: CMakeLists.txt  README.md
source-code/Functional/CountUpGenerator/: CMakeLists.txt  README.md  count_up.cpp
source-code/Functional/FibonacciGenerator/: CMakeLists.txt  README.md  fib.cpp
source-code/Functional/IIFE/: CMakeLists.txt  README.md  iife.cpp
source-code/Functional/Pendulum/: CMakeLists.txt  README.md  pendulum_bind.cpp  pendulum_func_obj.cpp  pendulum_lambda.cpp
source-code/Functional/PersistentBinaryTrees/: CMakeLists.txt  main.cpp  persistent_binary_tree.cpp  persistent_binary_tree.h  persistent_data_structures.pptx
source-code/Functional/StreamingData/: CMakeLists.txt  README.md  data.txt  generate_data.py  main_functional.cpp  main_oo.cpp  stats_functional.h  stats_oo.h
source-code/GeneralUtilities/: CMakeLists.txt  README.md  expected.cpp  expected_monadic.cpp  optional.cpp
source-code/GrammarFeatures/: CMakeLists.txt  Makefile  README.md  struct_initialiation.cpp  structured_bindings.cpp
source-code/IoStreams/: CMakeLists.txt  Makefile  README.md  alternative_io.cpp  format.cpp  formatting.cpp
source-code/Numerics/: CMakeLists.txt  Makefile  README.md  complex.cpp  julia.cpp  limits.cpp  multiple_distr.cpp  numbers_pi_versus_M_PI.cpp  random.cpp
source-code/ParallelExecution/: CMakeLists.txt  README.md  data.cpp  data.h  functions.cpp  functions.h  main_no_policy.cpp  main_par.cpp  main_seq.cpp  main_transform_par.cpp  main_transform_par_unseq.cpp  main_transform_seq.cpp
source-code/Pointers/: CMakeLists.txt  README.md  const_and_pointers.cpp  pointers_vs_references.cpp  runtime_vs_compile_time.cpp
source-code/Pointers/DoubleLinkedList/: README.md
source-code/Pointers/SharedPointers/: CMakeLists.txt  README.md  linked_list.cpp  linked_list.h  main.cpp
source-code/Pointers/Tree/: CMakeLists.txt  README.md  node.h  node_sptr.h  node_uptr.h
source-code/Random/: CMakeLists.txt  README.md  random_double.cpp  random_int.cpp
source-code/Ranges/: CMakeLists.txt  Makefile  README.md  classic_stl_to_ranges.cpp  classic_stl_to_ranges_performance.cpp  data.txt  enumerate.cpp  input_ranges.cpp  particle_sort.cpp  projection.cpp  simple.cpp  transform_accumulate.cpp
source-code/Regexes/: CMakeLists.txt  README.md  case.cpp  processes.cpp  reformat_events.cpp  simple_re_replace.cpp  strings.cpp  word_counter.cpp
source-code/STL/: CMakeLists.txt  Makefile  README.md  time.cpp
source-code/TOML++/: CMakeLists.txt  README.md  config.toml  main.cpp
source-code/TOML++/RandomNumbers/: CMakeLists.txt  (+3 more)
source-code/Tbb/: CMakeLists.txt  README.md  fibonacci_tasks.cpp
source-code/Templates/: .gitignore  CMakeLists.txt  Makefile  README.md  pendulum_func_obj.cpp  points.cpp
source-code/UserDefinedTypes/: CMakeLists.txt  README.md  charged_particles.cpp  class_particles.cpp  placement_new.cpp  streaming_stats.cpp
source-code/UsingCLibraries/: CMakeLists.txt  README.md  cannon_max_range.cpp  minimum.cpp
source-code/Vcpkg/: CMakeLists.txt  README.md  vcpkg_init.sh
source-code/Xtensor/: CMakeLists.txt  README.md  elementwise.cpp  svd.cpp
(+346 files in other folders)
